# linuxptp

./: bmc.c  clock.c  clock.h  clockadj.c  clockcheck.c  config.c  foreign.h  fsm.h  makefile  msg.c  msg.h  nsm.c  phc.c  phc2sys.c  pmc.c  pmc_agent.c  pmc_common.c  port.c  port_private.h  print.c  print.h  ptp4l.c  raw.c  sk.c  start.sh  tc.c  tlv.c  tlv.h  ts2phc.c  tsproc.c  tz2alt.c  udp.c  unicast_client.c  unicast_service.c  util.c
app/: .gitignore  CMakeLists.txt  Makefile  deploy.sh  ptp4l.cmake  src_init.sh  start-ptp4l.sh  test.sh
app/ktime/: os_clock.h
